--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script src="../../jquery/jquery-1.10.2.js"></script>
+    <script src="../libs/jquery-1.10.2.js"></script>
     <script src="area-selector.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
